--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,18 +1,18 @@
 {
   "extName": {
-    "message": "X Score - ツイートエンゲージメント予測",
+    "message": "X Score - 트윗 참여도 예측",
     "description": "Extension name"
   },
   "extDescription": {
-    "message": "Xのアルゴリズムに基づいてツイートのエンゲージメントスコアを予測します",
+    "message": "X의 알고리즘을 기반으로 트윗 참여도 점수를 예측합니다",
     "description": "Extension description"
   },
   "algorithmScore": {
-    "message": "アルゴリズムスコア",
+    "message": "알고리즘 점수",
     "description": "Title of the score popup"
   },
   "premiumVerified": {
-    "message": "Premium認証済み (x$BOOST$ boost)",
+    "message": "프리미엄 인증됨 (x$BOOST$ 부스트)",
     "description": "Badge shown for verified users",
     "placeholders": {
       "boost": {
@@ -22,103 +22,103 @@
     }
   },
   "engagementMetrics": {
-    "message": "エンゲージメント指標",
+    "message": "참여도 지표",
     "description": "Section title for engagement metrics"
   },
   "likes": {
-    "message": "いいね",
+    "message": "마음에 들어요",
     "description": "Likes label"
   },
   "replies": {
-    "message": "リプライ",
+    "message": "답글",
     "description": "Replies label"
   },
   "reposts": {
-    "message": "リポスト",
+    "message": "리포스트",
     "description": "Reposts label"
   },
   "views": {
-    "message": "表示回数",
+    "message": "조회수",
     "description": "Views label"
   },
   "bookmarks": {
-    "message": "ブックマーク",
+    "message": "북마크",
     "description": "Bookmarks label"
   },
   "engagementRate": {
-    "message": "エンゲージ率",
+    "message": "참여율",
     "description": "Engagement rate label"
   },
   "scoreBreakdown": {
-    "message": "スコアの内訳（公式ウェイト）",
+    "message": "점수 분석 (공식 가중치)",
     "description": "Section title for score breakdown"
   },
   "replyWithEngagement": {
-    "message": "リプライ→会話 (x75)",
+    "message": "답글→대화 (x75)",
     "description": "Score breakdown item"
   },
   "reply": {
-    "message": "リプライ (x13.5)",
+    "message": "답글 (x13.5)",
     "description": "Score breakdown item"
   },
   "profileClickEngagement": {
-    "message": "プロフィール (x12)",
+    "message": "프로필 클릭 (x12)",
     "description": "Score breakdown item"
   },
   "conversationEngagement": {
-    "message": "会話参加 (x11)",
+    "message": "대화 참여 (x11)",
     "description": "Score breakdown item"
   },
   "dwellTime": {
-    "message": "滞在時間 (x10)",
+    "message": "머문 시간 (x10)",
     "description": "Score breakdown item"
   },
   "repost": {
-    "message": "リポスト (x1)",
+    "message": "리포스트 (x1)",
     "description": "Score breakdown item"
   },
   "favorite": {
-    "message": "いいね (x0.5)",
+    "message": "마음에 들어요 (x0.5)",
     "description": "Score breakdown item"
   },
   "videoView": {
-    "message": "動画視聴 (x0.005)",
+    "message": "동영상 조회 (x0.005)",
     "description": "Score breakdown item"
   },
   "content": {
-    "message": "コンテンツ",
+    "message": "콘텐츠",
     "description": "Section title for content analysis"
   },
   "characterCount": {
-    "message": "文字数",
+    "message": "글자 수",
     "description": "Character count label"
   },
   "hashtags": {
-    "message": "ハッシュタグ",
+    "message": "해시태그",
     "description": "Hashtags label"
   },
   "mentions": {
-    "message": "メンション",
+    "message": "언급",
     "description": "Mentions label"
   },
   "media": {
-    "message": "メディア",
+    "message": "미디어",
     "description": "Media label"
   },
   "mediaVideo": {
-    "message": "動画",
+    "message": "동영상",
     "description": "Video media type"
   },
   "mediaImage": {
-    "message": "画像",
+    "message": "이미지",
     "description": "Image media type"
   },
   "mediaNone": {
-    "message": "なし",
+    "message": "없음",
     "description": "No media"
   },
   "footer": {
-    "message": "Xアルゴリズムに基づく (xai-org/x-algorithm)",
+    "message": "X 알고리즘 기반 (xai-org/x-algorithm)",
     "description": "Footer text"
   }
 }
